# laser-tetris

./: Cargo.toml
arduino/: Cargo.toml  flash.sh  memory.x
arduino/.cargo/: config.toml
arduino/src/: main.rs
common/: Cargo.toml
demo/: Cargo.toml
demo/src/: main.rs
rp2040/: Cargo.toml
rp2040/.cargo/: config.toml
rp2040/src/: main.rs
tetris/: Cargo.toml
tetris/src/: lib.rs  random.rs  rotate.rs
